Fix for #1562: promote exact-match type proposals and demote prefix miss